--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@ header {
     width: 100%;
     color: white;
     text-shadow:
-        -1.5px -1.5px #000,
-		1.5px -1.5px #000,
-		-1.5px 2px #000,
-		1.5px 2px #000;
+        -2px -2px rgba(0,0,100,0.5),
+		2px -2px rgba(0,100,0,0.5),
+		-2px 2px rgba(100,0,0,0.5),
+		2px 2px rgba(0,0,0,0.4);
 }
 nav {
     display: flex;
