--- a/project/css/style.css
+++ b/project/css/style.css
@@ -12,8 +12,8 @@ header {
     height: 9.25vh;
     width: 100%;
     background-image: url(bg/banner.png);
-    background-attachment: fixed;
-    background-position: left;
+    background-attachment: scroll;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     border-bottom: 0.25vh solid black;
@@ -33,10 +33,14 @@ header {
     overflow: hidden;
     text-overflow: clip;
     text-shadow:
-        -2px -2px rgba(0,0,100,0.7),
+        -2px -2px black,
+		2px -2px black,
+		-2px 2px black,
+		2px 2px black;
+        /*-2px -2px rgba(0,0,100,0.7),
 		2px -2px rgba(0,100,0,0.7),
 		-2px 2px rgba(100,0,0,0.7),
-		2px 2px rgba(0,0,0,0.4);
+		2px 2px rgba(0,0,0,0.4);*/
 }
 nav {
     display: flex;
@@ -260,6 +264,15 @@ h3 {
     padding:50px 80px;
     text-align: justify;
 }
+.about {
+    font-size: 30px;
+    font-family: serif;
+    color: #777;
+    background-color:white;
+    text-align:center;
+    padding:50px 25vw;
+    text-align: justify;
+}
 .intro h3 {
     text-align:center;
 }
@@ -286,4 +299,3 @@ h3 {
 ::-webkit-scrollbar {
     width: 0px;
 }
-
