--- a/project/css/style.css
+++ b/project/css/style.css
@@ -9,9 +9,9 @@ body {
     font-family: "lato", sans-serif;
 }
 header {
-    height: 9.25vh;
+    height: 6.25vh;
     width: 100%;
-    background-image: url(bg/banner.png);
+    background-image: url(bg/banner.jpg);
     background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
@@ -23,9 +23,10 @@ header {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 9.5vh;
+    height: 5.5vh;
 }
 .heading h1 {
+    font-size: 6vh;
     text-align: center;
     width: 100%;
     color: white;
@@ -43,15 +44,24 @@ header {
 		2px 2px rgba(0,0,0,0.4);*/
 }
 nav {
+    
+    
+    float: left;
+    display: block;
+    width: 15vw;
+
+    
+    /*
     display: flex;
     align-items: center;
     height: 5vh;
     width: 100%;
-    background-color: grey;
+    background-color: white;
     border-bottom: 0.25vh solid black;
+    */
 }
 .button {
-    color: white;
+    color: black;
     padding: 1vh 0px;
     text-align: center;
     text-decoration: none;
@@ -59,10 +69,14 @@ nav {
     font-size: 1.5em;
     margin: 0px 0px;
     cursor: pointer;
-    width: 150px;
+    width: 15vw;
 }
 .button:hover {
-    background-color: black;
+    background-color: #444;
+    color: #fff;
+}
+.narrow {
+    display: none;
 }
 .content {
 }
@@ -71,15 +85,59 @@ nav {
     bottom: 0;
     border: none;
     align-items:center;
-    height: 85vh;
-    width: 100%;
+    height: 93.75vh;
+    width: 85vw;
+}
+
+@media only screen and (max-width: 700px) {
+    nav {
+        display: flex;
+        align-items: center;
+        height: 10vh;
+        width: 100vw;
+        background-color: white;
+        border-bottom: 0.25vh solid black;
+    }
+    .content iframe{
+        height: 85vh;
+        width: 100vw;
+    }
+    .button {
+        padding: 3vh 2vh;
+        width: 25vw;
+    }
+    .wide {
+        display: none;
+    }
+    .narrow {
+        display: block;
+    }
+}
+@media only screen and (max-device-width: 1024px){
+    nav {
+        display: flex;
+        align-items: center;
+        height: 10vh;
+        width: 100vw;
+        background-color: white;
+        border-bottom: 0.25vh solid black;
+    }
+    .content iframe{
+        height: 85vh;
+        width: 100vw;
+    }
+    .button {
+        padding: 3vh 2vh;
+        width: 25vw;
+    }
+    .wide {
+        display: none;
+    }
+    .narrow {
+        display: block;
+    } 
 }
 /*
-@media only screen and (max-width: 600px) {
-  nav {
-    background-color: lightblue;
-  }
-}
 @media only screen and (max-height: 500px) {
     nav {
         background-color: lightblue;
@@ -250,7 +308,9 @@ get a bg image for every different class*/
     font-size: 25px;
     letter-spacing: 10px;
 }
-
+.caption span.border.scroll {
+    background-color: transparent;
+}
 h3 {
     letter-spacing: 5px;
     text-transform: uppercase;
@@ -270,8 +330,19 @@ h3 {
     color: #777;
     background-color:white;
     text-align:center;
-    padding:50px 25vw;
-    text-align: justify;
+    padding:50px 25vw; 
+}
+.contact {
+    color: #777;
+    background-color: #f5f5f5f5;
+    text-align:left;
+    padding:50px 20px;
+}
+.contact h3 {
+    text-align:center;
+}
+.contact a {
+    color: #444;
 }
 .intro h3 {
     text-align:center;
@@ -298,4 +369,41 @@ h3 {
 }
 ::-webkit-scrollbar {
     width: 0px;
+}
+
+@media only screen and (max-width: 700px) {
+}
+
+
+
+
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #fcfcfc;
+  padding: 20px;
 }
