--- a/project/css/style.css
+++ b/project/css/style.css
@@ -78,6 +78,9 @@ nav {
 }
 
 @media only screen and (max-width: 700px) {
+    .heading h1 {
+        font-size: 1.5em;
+    }
     nav {
         display: flex;
         align-items: center;
@@ -109,6 +112,9 @@ nav {
     }
 }
 @media only screen and (max-device-width: 1024px){
+    .heading h1 {
+        font-size: 1.5em;
+    }
     nav {
         display: flex;
         align-items: center;
