--- a/project/css/style.css
+++ b/project/css/style.css
@@ -26,7 +26,7 @@ header {
     height: 5.5vh;
 }
 .heading h1 {
-    font-size: 6vh;
+    font-size: 5.5vh;
     text-align: center;
     width: 100%;
     color: white;
@@ -77,97 +77,9 @@ nav {
     width: 85vw;
 }
 
-@media only screen and (max-width: 700px) {
-    .heading h1 {
-        font-size: 1.5em;
-    }
-    nav {
-        display: flex;
-        align-items: center;
-        height: 10vh;
-        width: 100vw;
-        background-color: white;
-        border-bottom: 0.25vh solid black;
-    }
-    .content iframe{
-        height: 85vh;
-        width: 100vw;
-    }
-    .button {
-        padding: 3vh 2vh;
-        width: 25vw;
-        font-size: 1em;
-    }
-    .button:hover {
-        text-decoration: underline;
-        color: grey;
-        background-color: transparent;
-    }
-    .wide {
-        display: none;
-    }
-    .narrow {
-        display: block;
-        font-size: 2em;
-    }
-}
-@media only screen and (max-device-width: 1024px){
-    .heading h1 {
-        font-size: 1.5em;
-    }
-    nav {
-        display: flex;
-        align-items: center;
-        height: 10vh;
-        width: 100vw;
-        background-color: white;
-        border-bottom: 0.25vh solid black;
-    }
-    .content iframe{
-        height: 85vh;
-        width: 100vw;
-    }
-    .button {
-        padding: 3vh 2vh;
-        width: 25vw;
-        font-size: 1em;
-    }
-    .button:hover {
-        text-decoration: underline;
-        color: grey;
-        background-color: transparent;
-    }
-    .wide {
-        display: none;
-    }
-    .narrow {
-        display: block;
-        font-size: 2em;
-    }
-}
-/*
-@media only screen and (max-height: 500px) {
-    nav {
-        background-color: lightblue;
-        display: block;
-    }
-    header {
-        float: left;
-        width: 24.5vw;
-        height: 100vh;
-        border-bottom: none;
-        border-top: none;
-        border-right: 0.25vw solid black;
-        border-left: 0.25vw solid black;
-    }
-    .content iframe{
-        height: 100vh;
-        width: 75vw;
-    }
-}
-/*--------------------------------
-CSS STYLING OF THE PARALLAX STUFF
---------------------------------*/
+/*-------------------------
+CSS STYLING OF THE I FRAMES
+--------------------------*/
 
 .parallax {
   height: 100%;
@@ -187,6 +99,95 @@ CSS STYLING OF THE PARALLAX STUFF
 
 .top, .bottom {
     min-height: 100vh;
+}
+
+.caption {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: #000;
+}
+
+.caption span.border {
+    background-color: #111;
+    color: #fff;
+    padding: 18px;
+    font-size: 25px;
+    letter-spacing: 10px;
+}
+
+.caption span.border.scroll {
+    background-color: transparent;
+}
+
+h3 {
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font: 20px "Lato", sans-serif;
+    color: #111;
+}
+
+.intro {
+    color: #777;
+    background-color:white;
+    text-align:center;
+    padding:50px 80px;
+    text-align: justify;
+}
+
+.about {
+    font-size: 30px;
+    font-family: serif;
+    color: #777;
+    background-color:white;
+    text-align:center;
+    padding:50px 25vw; 
+}
+
+.about a {
+    font-size: 15px;
+}
+
+.contact {
+    color: #777;
+    background-color: #f5f5f5f5;
+    text-align:left;
+    padding:50px 20px;
+}
+
+.contact h3 {
+    text-align:center;
+}
+
+.contact a {
+    color: #444;
+}
+
+.intro h3 {
+    text-align:center;
+}
+
+.textsep {
+    position:relative;
+}
+
+.info {
+    color:#000;
+    background-color:#fff;
+    text-align:center;
+    padding:50px 80px;
+    text-align: justify;
+}
+
+.sep {
+    height: 10vh;
+    background-color: white;
+}
+
+::-webkit-scrollbar {
+    width: 0px;         /*delete the scrollbar*/
 }
 
 /* --------------------------------------
@@ -300,91 +301,13 @@ get a bg image for every different class*/
     background-image: url(bg/phone.jpg);
 }
 
-.caption {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-    color: #000;
+.legal {
+    background-image: url(bg/legal.jpg);
 }
 
-.caption span.border {
-    background-color: #111;
-    color: #fff;
-    padding: 18px;
-    font-size: 25px;
-    letter-spacing: 10px;
-}
-.caption span.border.scroll {
-    background-color: transparent;
-}
-h3 {
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    font: 20px "Lato", sans-serif;
-    color: #111;
-}
-.intro {
-    color: #777;
-    background-color:white;
-    text-align:center;
-    padding:50px 80px;
-    text-align: justify;
-}
-.about {
-    font-size: 30px;
-    font-family: serif;
-    color: #777;
-    background-color:white;
-    text-align:center;
-    padding:50px 25vw; 
-}
-.contact {
-    color: #777;
-    background-color: #f5f5f5f5;
-    text-align:left;
-    padding:50px 20px;
-}
-.contact h3 {
-    text-align:center;
-}
-.contact a {
-    color: #444;
-}
-.intro h3 {
-    text-align:center;
-}
-.textsep {
-    position:relative;
-}
-.info {
-    color:#000;
-    background-color:#fff;
-    text-align:center;
-    padding:50px 80px;
-    text-align: justify;
-}
-.sep {
-    height: 10vh;
-    background-color: white;
-}
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1024px) {
-  .bg {
-    background-attachment: scroll;
-  }
-}
-::-webkit-scrollbar {
-    width: 0px;
-}
-
-@media only screen and (max-width: 700px) {
-}
-
-
-
-
+/*----------------------
+CSS STYLING OF THE FORM
+-----------------------*/
 
 input[type=text], select, textarea {
   width: 100%;
@@ -414,4 +337,84 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #fcfcfc;
   padding: 20px;
+}
+
+/*-----------------------------------
+RESPONSIVE LAYOUT RESIZING THE WINDOW
+-------------------------------------*/
+
+@media only screen and (max-width: 700px) {
+    .heading h1 {
+        font-size: 1.5em;
+    }
+    nav {
+        display: flex;
+        align-items: center;
+        height: 10vh;
+        width: 100vw;
+        background-color: white;
+        border-bottom: 0.25vh solid black;
+    }
+    .content iframe{
+        height: 85vh;
+        width: 100vw;
+    }
+    .button {
+        padding: 3vh 2vh;
+        width: 25vw;
+    }
+    .button:hover {
+        text-decoration: underline;
+        color: grey;
+        background-color: transparent;
+    }
+    .wide {
+        display: none;
+    }
+    .narrow {
+        display: block;
+        font-size: 1.5em;
+    }
+}
+
+/*-----------------------------------
+RESPONSIVE LAYOUT FOR PHONE SCREENS
+-------------------------------------*/
+
+@media only screen and (max-device-width: 1024px){
+    .bg {
+        background-attachment: scroll;
+    }
+    .heading h1 {
+        font-size: 1.5em;
+    }
+    nav {
+        display: flex;
+        align-items: center;
+        height: 10vh;
+        width: 100vw;
+        background-color: white;
+        border-bottom: 0.25vh solid black;
+    }
+    .content iframe{
+        height: 85vh;
+        width: 100vw;
+    }
+    .button {
+        padding: 3vh 2vh;
+        width: 25vw;
+        font-size: 1em;
+    }
+    .button:hover {
+        text-decoration: underline;
+        color: grey;
+        background-color: transparent;
+    }
+    .wide {
+        display: none;
+    }
+    .narrow {
+        display: block;
+        font-size: 2em;
+    }
 }
