--- a/project/css/style.css
+++ b/project/css/style.css
@@ -430,57 +430,39 @@ RESPONSIVE LAYOUT FOR PHONE SCREENS
         font-size: 1.5em;
     }
     
-    
-    
-    
     .caption span.border {
-        background-color: #111;
-        color: #fff;
-        padding: 9px;                      /* black border and white font for the main captions*/
+        padding: 9px;
         font-size: 15px;
-        letter-spacing: 8px;
+        letter-spacing: 6px;
     }
 
+    .heading h1 {
+        font-size: 4.75vh;
+    }
+    
     h2 {
         letter-spacing: 3px;
-        text-transform: uppercase;          /* all cps titles!*/
         font-size: 13px;
-        color: #111;
     }
 
     .info {
-        color:#000;
-        background-color:#fff;
-        text-align:center;                  /* this is the basic text section*/
         padding:50px 15px;
-        text-align: justify;
     }
 
     .intro {
-        color: #777;
-        background-color:white;
-        text-align:center;                  /* this is the 1st text section*/
         padding:50px 15px;
-        text-align: justify;
     }
 
     .about {
         font-size: 15px;
-        font-family: serif;
-        color: #777;                        /* specific to the "about" section serif for the wanted look*/
-        background-color:white;
-        text-align:center;
         padding:50px 15px; 
     }
 
     .about a {
-        font-size: 8px;                    /* making the legal link small*/
+        font-size: 8px;                    
     }
 
     .contact {
-        color: #777;
-        background-color: #f5f5f5f5;
-        text-align:left;
         padding:50px 15px;
     }
 }
