--- a/blackjack/css/style.css
+++ b/blackjack/css/style.css
@@ -11,11 +11,13 @@
     align-items: center;
     justify-content: center;    
 }
-.small{
-    font-size: 7px;
-    justify-content: left; 
-    
-
+.ascii.small p{
+    font-size: 5px;
+}
+.ascii.small{
+    padding: 0;
+    align-items: left;
+    justify-content: left;
 }
 .ascii p{
     margin-top: -2rem;
@@ -135,3 +137,18 @@ form{
     align-items: center;
     justify-content: center;
 }
+/*-----------
+PLAYER.HTML--
+-----------*/
+span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 100px;
+    color: rgba(75,255,75,0.4)
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+}
+
