--- a/blackjack/css/style.css
+++ b/blackjack/css/style.css
@@ -65,9 +65,9 @@ iframe{
     z-index: 10;
     border: none;
     border-radius: 15px;
-    animation-name: flicker;
+  /*  animation-name: flicker;
     animation-duration: 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: infinite; */
 }
 @keyframes flicker{
 0% {background-image:repeating-linear-gradient(rgba(0,255,0,0.9), rgba(0,0,0,0.9));}
