--- a/blackjack/css/style.css
+++ b/blackjack/css/style.css
@@ -5,6 +5,11 @@
     background-color: rgba(0,0,0,0);
     border: none;
 }
+
+::-webkit-scrollbar {
+    width: 0px;
+}
+
 .ascii{
     padding-top: 10px;
     display: flex;
@@ -65,9 +70,9 @@ iframe{
     z-index: 10;
     border: none;
     border-radius: 15px;
-  /*  animation-name: flicker;
+/*    animation-name: flicker;
     animation-duration: 1s;
-    animation-iteration-count: infinite; */
+    animation-iteration-count: infinite;*/
 }
 @keyframes flicker{
 0% {background-image:repeating-linear-gradient(rgba(0,255,0,0.9), rgba(0,0,0,0.9));}
@@ -140,15 +145,25 @@ form{
 /*-----------
 PLAYER.HTML--
 -----------*/
-span{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.grid{
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(6, 1fr);
     font-size: 100px;
-    color: rgba(75,255,75,0.4)
+    color: rgba(75,255,75,0.4);
+    text-align: center;
 }
-
-::-webkit-scrollbar {
-    width: 0px;
+#spade{
+    grid-area: 2 / 1 / span 2 / span 2;
+}
+#heart{
+    grid-area: 1 / 3 / span 2 / span 2;
+}
+#club{
+    grid-area: 2 / 5 / span 2 / span 2;
+}
+i:hover{
+    background-color: rgba(75,255,75,0.7);
+    color: rgba(0,25,0,0.9);
+    cursor: pointer;
 }
 
