--- a/drawacard/style.css
+++ b/drawacard/style.css
@@ -18,11 +18,11 @@
     color: red;
 }
 p{
-    padding: 1%;
+    padding: 5px;
 }
 #name, #total{
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: sans-serif;
 }
 #myCard {
@@ -36,8 +36,8 @@ p{
 button {
     margin: 0;
     padding: 0;
-    border: 5px solid rgba(255, 255, 255, 0);
-    background-color: rgba(255, 255, 255, 0);
+    border: 5px solid white;
+    background-color:white;
 }
 
 button:hover {
